1. Метод .of [#448194]