@@ -1,6 +1,7 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
+
 import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.Matchers.is;
@@ -10,7 +11,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -18,7 +19,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -26,7 +27,7 @@ public class DepartmentsTest {
     @Test
     public void whenAscSort() {
         List<String> input = Arrays.asList("k1/sk2", "k2", "k1/sk1/ssk1", "k1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1/ssk1", "k1/sk2", "k2");
+        List<String> expect = List.of("k1", "k1/sk1/ssk1", "k1/sk2", "k2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
@@ -34,7 +35,7 @@ public class DepartmentsTest {
     @Test
     public void whenDescSort() {
         List<String> input = Arrays.asList("k1/sk2", "k2", "k1/sk1/ssk1", "k1");
-        List<String> expect = Arrays.asList("k2", "k1", "k1/sk1/ssk1", "k1/sk2");
+        List<String> expect = List.of("k2", "k1", "k1/sk1/ssk1", "k1/sk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
